--- a/api/package.json
+++ b/api/package.json
@@ -12,12 +12,15 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-validator": "^7.2.1",
+		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.13.0",
-		"mongoose": "^8.9.6"
+		"mongoose": "^8.9.6",
+		"redis": "^4.7.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.0"
